test/good/functions/var03.px

func concat(String a, String b) String def
    return a + b

func id(String->String->String f) String->String->String def
    return f

f = id(id(concat))
print f("foo", "bar")
