test/bad/functions/type04.px

func id(Int->String f) Int->String def
    return id

id()
